--- a/BulkyWeb/Areas/Customer/Views/_ViewImports.cshtml
+++ b/BulkyWeb/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using BulkyWeb
 @using Bulky.Models
 @using Bulky.Models.ViewModels
+@using System.Globalization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
