--- a/BulkyWeb/Areas/Customer/Views/_ViewImports.cshtml
+++ b/BulkyWeb/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using BulkyWeb
 @using Bulky.Models
 @using Bulky.Models.ViewModels
+@using Bulky.Utility
 @using System.Globalization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
